TTWWW-478: Fix according to ticket comments

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/mobile_popup.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/mobile_popup.html
@@ -3,7 +3,7 @@
         <h2 class='mb-3 font-serif font-light text-dark-gray2 text-4md md:text-3lg'>The Global Autism Prevalence Map is available exclusively on desktop devices.</h2>
         <p class='mb-6 font-serif font-light text-dark-gray2 text-1sm leading-5 md:mb-10 md:text-3sm'>Please use a browser on your desktop, or enlarge your browser window if already on a desktop, to access all the features of the map.</p>
         <div class='flex gap-4'>
-            <button data-id='close-mobile-popup-btn' class='block bg-med-navy border-0.5 border-navy w-fit font-bold font-sans text-3xs tracking-widest-sm text-light-navy-2 uppercase px-10 py-3 rounded no-underline hover:underline hidden md:block'>Okay</button>
+            <button data-id='close-mobile-popup-btn' class='block bg-med-navy border-0.5 border-navy w-fit font-bold font-sans text-3xs tracking-widest-sm text-light-navy-2 uppercase px-10 py-3 rounded no-underline hover:underline hidden md:block'>OK</button>
             <a class='block border-0.5 border-navy bg-light-gray w-fit font-bold font-sans text-3xs tracking-widest-sm text-med-navy uppercase px-10 py-3 rounded no-underline hover:underline' href='https://www.thetransmitter.org/'>RETURN TO HOMEPAGE</a>
         </div>
     </div>
