--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -12,7 +12,7 @@
 
     <!-- Map div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class='flex'>
+    <div class='flex mb-6 xl:mb-10'>
         <div id='info-card-container' class='relative h-map lg:h-map-lg xl:h-card-xl w-info lg:mr-10.5 xl:mr-12 pt-4 bg-white border-0.5 border-light-gray3 rounded-md shadow-info'>
             <div id='info-card' class='welcome-content relative max-h-info overflow-y-scroll px-4 pb-0.75'>
                 <h1 class='mt-24 lg:mt-25.5 xl:mt-46.5 mb-3.25 max-w-welcome font-serif text-2md font-bold leading-7.2 text-med-navy'>Welcome to the Global Autism Prevalence Map.</h1>
@@ -24,7 +24,7 @@
     </div>
     <!-- Timeline div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class='h-timeline bg-dark-gray border-0.5 border-dark-gray2 rounded-md pl-4 pb-1.5'>
+    <div class='h-timeline bg-dark-gray border-0.5 border-dark-gray2 rounded-lg pl-4 pb-1.5'>
         <div class='row'>
             <div id='timeline-toggle' class='inline-block align-top mr-16 pt-10.5'>
                 <h2 class='mb-2.75 font-serif text-lg2 text-tan'>Timeline of studies</h2>
