TTWWW-475: updated timeline copy and made timeline tooltip hide after 3 seconds

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -38,7 +38,7 @@
             {% endif %}
         </div>
         <div class='relative inline-block align-top'>
-            <span class='absolute top-5 font-serif text-sm2 text-tan italic'>*Drag the cursor horizontally across the timeline to view data <img src="{% static 'autism_prevalence_map/img/icon-question.svg' %}" alt='question icon' class='inline-block pl-1.75 translate-y-neg2 cursor-pointer' id='help'></span>
+            <span class='absolute top-5 font-serif text-sm2 text-tan italic'>*Drag the cursor horizontally across the timeline to select years. <img src="{% static 'autism_prevalence_map/img/icon-question.svg' %}" alt='question icon' class='inline-block pl-1.75 translate-y-neg2 cursor-pointer' id='help'></span>
             <div id='timeline' class='timeline block h-brush w-timeline lg:w-timeline-lg xl:w-timeline-xl'></div>
         </div>
     </div>
