TTWWW-476: updated list.ts to use single quotes

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -10,8 +10,10 @@
 <div class='relative mx-auto max-w-container'>
     {% include "autism_prevalence_map/action_buttons.html" with template="list" %}
 
-    <div class="pt-4 pb-4 mx-auto max-w-container">
+    <div class="pt-3.25 pb-4 mx-auto max-w-container">
         <div id="list">
+            <div class="text-2xs uppercase text-med-navy">32 results</div>
+
             <table id="studies">
                 <thead>
                     <tr>
