TTWWW-476: added in missing variables on the list page

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -54,6 +54,8 @@
     let timeline_type = '{{ timeline_type }}';
     let income = '{{ meanincome }}';
     let education = '{{ education }}';
+    let country = '{{ country }}';
+    let continent = '{{ continent }}';
     const world_atlas = '{% static "autism_prevalence_map/vendor/data/110m.json" %}';
     const chevron_down = '{% static "autism_prevalence_map/img/icon-chevron-down.svg" %}';
 </script>
