--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -79,7 +79,7 @@
                         </div>
                         <div class='flex-search relative'>
                             <input id='search' class='w-full py-1.2 px-2 text-1xs3 text-med-navy font-bold uppercase placeholder-light-navy-3 rounded-xl outline-none' data-id="keyword-filter-input" type='search' placeholder='Filter data by keyword' aria-label='Filter data by keyword'>
-                            <button class='absolute -right-1 top-0 border-none hidden' type="button" aria-label="Clear search" role="button" data-id="keyword-filter-clear-btn">
+                            <button class='absolute -right-1 top-0 border-none hidden' type="button" aria-label="Clear search" role="button" data-id="keyword-filter-x-btn">
                                 {% svg 'icon-clear' %}
                             </button>
                         </div>
