TTWWW-480: Fixes according to ticket comments

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -11,7 +11,7 @@
 <div class="bg-white pb-14 md:pb-32">
     <section class="py-5 bg-light-navy-2">
         <div class="font-serif font-light my-8 flex flex-col items-center col-span-4 md:col-start-4 md:col-span-6">
-            <h1 class="text-4md text-red text-center md:text-xl">About</h1>
+            <h1 class="text-4md text-red text-center md:text-xl">About the Global Autism Prevalence Map</h1>
         </div>
     </section>
     <section class="max-w-400 mx-auto px-4 py-4 md:py-8">
@@ -19,7 +19,6 @@
             <h2 class="font-serif font-bold normal-case text-3sm leading-5.5 text-red md:tracking-normal-lg md:mb-8 md:leading-7.1 md:text-1.5md">Table of contents</h2>
             <div
                 class="font-serif-text font-thin text-1sm leading-6.4 tracking-wide text-dark-gray2 md:leading-8 md:tracking-wide md:text-3sm">
-                <a class="block font-serif font-medium" href="#about-map">About the Global Autism Prevalence Map</a>
                 <a class="block font-serif font-medium" href="#how-to-use-map">How to use the map</a>
                 <a class="block font-serif font-medium" href="#key-to-terms">Key to terms used on the map</a>
                 <a class="block font-serif font-medium" href="#how-to-cite-map">How to cite the map</a>
@@ -29,7 +28,6 @@
             </div>
         </article>
         <article class="mx-auto mt-3 md:max-w-159">
-            <h2 id="about-map" class="mb-4 mt-6 font-sans font-medium uppercase text-1md text-red md:mt-12 md:text-lg">About the Global Autism Prevalence Map:</h2>
             <p>This map was created by the team at <a href="https://www.thetransmitter.org/"><i>The Transmitter</i></a>, an essential resource for the neuroscience community, dedicated to helping scientists at all career stages stay current and build connections. <a href="https://www.thetransmitter.org/spectrum/"><i>Spectrum</i></a> is a key part of <i>The Transmitter</i> and publishes news and perspectives about autism research. Subscribe to our <a href="https://www.thetransmitter.org/newsletters-alerts/"><i>Spectrum</i> newsletter</a> to stay up to date.</p>
             <p>The map features a collection of studies on autism prevalence around the world. It highlights places where information is available—and places where information is missing. We periodically update the map with new studies as they become available</p>
             <h2 id="how-to-use-map" class="mb-4 mt-6 font-sans font-medium uppercase text-1md text-red md:mt-12 md:text-lg">How to use the Global Autism Prevalence Map:</h2>
