TTWWW-476: updated  joint to remove code no longer needed and updated list view to load map svgs when rows are expanded instead of all on page load

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="absolute right-0 flex items-start flex-wrap justify-end w-buttons">
-        <button role='button' data-mean class='inline-block w-button mr-4 pt-2.4 pb-2.4 bg-light-gray border-0.5 border-navy rounded-sm text-sm font-bold text-med-navy uppercase hover:text-red no-underline' aria-haspopup='true' aria-controls='mean-popup'>Calculate mean</button>
+        <button role='button' data-mean class='inline-block w-button mr-4 pt-2.4 pb-2.4 bg-light-gray border-0.5 border-navy rounded-sm text-sm font-bold text-med-navy uppercase hover:text-light-red no-underline' aria-haspopup='true' aria-controls='mean-popup'>Calculate mean</button>
 
         <a role='button' id='download-link' class='inline-block w-button pt-2.5 pb-2.5 bg-med-navy rounded-sm text-sm font-bold text-light-navy-2 uppercase text-center no-underline' href='#'>Download Data</a>
 
