--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -1,6 +1,7 @@
 {% extends 'autism_prevalence_map/base.html' %} 
 
-{% load static %} 
+{% load static %}
+{% load svg %}
 
 {% block page_name %}map{% endblock %}
 
@@ -12,7 +13,7 @@
 
     <!-- Map div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class='flex mb-6 xl:mb-10'>
+    <div class='relative flex mb-6 xl:mb-10'>
         <div id='info-card-container' class='relative h-map lg:h-map-lg xl:h-card-xl w-info lg:mr-10.5 xl:mr-12 pt-4 bg-white border-0.5 border-light-gray3 rounded-md shadow-info'>
             <div id='info-card' data-content='welcome' class='relative max-h-info overflow-y-scroll px-4 pb-0.75'>
                 <h1 class='mt-24 lg:mt-25.5 xl:mt-46.5 mb-3.25 max-w-welcome font-serif text-2md font-bold leading-7.2 text-med-navy'>Welcome to the Global Autism Prevalence Map.</h1>
@@ -20,7 +21,31 @@
                 <a href='/about/' class='inline-block w-learn py-2.5 bg-med-navy rounded-sm text-sm font-bold text-light-navy-2 uppercase text-center no-underline'>Learn More</a>
             </div>
         </div>
+
         <div id='map' class='h-map w-map lg:h-map-lg lg:w-map-lg xl:h-map-xl xl:w-map-xl xl:mt-6.5'></div>
+
+        <div id='zoom-buttons' class='absolute bottom-0 right-0 flex flex-col items-end gap-6'>
+            <button type='button' id='expand' class='border-0.5 border-med-navy rounded-sm bg-light-gray cursor-pointer'>
+                {% svg 'icon-expand' %}
+                <span class='sr-only'>Expand</span>
+            </button>
+
+            <div class='flex flex-col'>
+                <button type='button' id='zoom-in' class='border-0.5 border-med-navy rounded-sm bg-light-gray cursor-pointer'>
+                    {% svg 'icon-plus' %}
+                    <span class='sr-only'>Zoom In</span>
+                </button>
+                <button type='button' id='zoom-out' class='border-0.5 border-med-navy rounded-sm bg-light-gray cursor-pointer'>
+                    {% svg 'icon-minus' %}
+                    <span class='sr-only'>Zoom Out</span>
+                </button>
+            </div>
+
+            <a class='inline-block' href='https://www.thetransmitter.org/spectrum/'>
+                {% svg 'spectrum-logo' %}
+                <span class='sr-only'>Spectrum</span>
+            </a>
+        </div>
     </div>
     <!-- Timeline div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -43,15 +68,6 @@
         </div>
     </div>
 </div>
-
-<!-- Zoom buttons
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<!--
-<div id='zoom-buttons' class='zoom-buttons btn-group-vertical'>
-    <button type='button' id='zoom-in' class='btn zoom-button'><i class='fas fa-plus'></i></button>
-    <button type='button' id='zoom-out' class='btn zoom-button'><i class='fas fa-minus'></i></button>
-</div>
--->
 
 <!-- More Information Card
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
