TTWWW-474: added overflow hidden to the map container and figured out the issue of repositioning the map pins after scaling the map

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <div id='map' class='h-map w-map lg:h-map-lg lg:w-map-lg xl:h-map-xl xl:w-map-xl xl:mt-6.5 transition-all duration-300 ease-in-out'></div>
+        <div id='map' class='h-map w-map lg:h-map-lg lg:w-map-lg xl:h-map-xl xl:w-map-xl xl:mt-6.5 transition-all duration-300 ease-in-out overflow-hidden'></div>
 
         <div id='zoom-buttons' class='absolute bottom-0 right-0 flex flex-col items-end gap-6'>
             <button type='button' id='expand' class='flex items-center justify-center w-zoomcontrol h-expand border-0.5 border-med-navy rounded-sm bg-light-gray cursor-pointer'>
