TTWWW-474: target blank on the spectrum logo link

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -42,7 +42,7 @@
                 </button>
             </div>
 
-            <a class='inline-block' href='https://www.thetransmitter.org/spectrum/'>
+            <a class='inline-block' href='https://www.thetransmitter.org/spectrum/' target='_blank'>
                 {% svg 'spectrum-logo' %}
                 <span class='sr-only'>Spectrum</span>
             </a>
