--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -42,6 +42,10 @@
             'analytics_storage': 'granted',
             'region': ['US']
         });
+        dataLayer.push({'content_group_id': 'TTmiscellaneous17',
+                        'content_group_name': 'Tools, Microsites and Miscellaneous Resources'}
+        );
+
         (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
