--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -14,7 +14,7 @@
         <div id='list'>
             <div class='pb-3.25 text-2xs uppercase text-med-navy'><span id='results-count'>0</span> results</div>
 
-            <table id='studies' class='w-full'>
+            <table id='studies-table' class='w-full'>
                 <thead class='bg-dark-gray border-b-12 border-tan'>
                     <tr>
                         <th scope='col' class='w-toggle'></th>
