--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -1,7 +1,7 @@
 {% extends 'autism_prevalence_map/base.html' %}
 
 {% load static %}
-
+{% block  title %}Global Autism Prevalence Map_About | The Transmitter {% endblock %}
 {% block page_name %}about{% endblock %}
 
 {% block body_block %}
