--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -1,7 +1,7 @@
 {% extends 'autism_prevalence_map/base.html' %} 
 
 {% load static %} 
-
+{% block  title %}Global Autism Prevalence Map_List | The Transmitter {% endblock %}
 {% block page_name %}list{% endblock %}
 
 {% block body_block %}
