--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/footer.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/footer.html
@@ -37,7 +37,7 @@
                         </li>
                     </ul>
                 </div> <a href="https://www.thetransmitter.org/spectrum/"
-                    class="flex text-light-navy-2 w-25 gap-2 items-center hover:text-light-red md:w-unset">
+                    class="flex text-light-navy-2 w-25 gap-2 items-center hover:text-med-red md:w-unset">
                     {% svg 'spectrum' %} Spectrum
                 </a>
                 <div class="h-px w-full bg-white my-10 md:hidden"></div>
@@ -48,7 +48,7 @@
                     Have you recently published new research in neuroscience? </p>
                 <span class="font-serif text-1sm md:text-3sm">
                 </span>
-                <a class="font-sans text-2xs uppercase underline tracking-extra-wide hover:text-light-red md:text-2sm md:tracking-extra-wide"
+                <a class="font-sans text-2xs uppercase underline tracking-extra-wide hover:text-med-red md:text-2sm md:tracking-extra-wide"
                     href="https://www.thetransmitter.org/contact-us/">
                     Let us know </a>
                 <div class="h-px w-full bg-white mt-4 mb-10 md:hidden"></div>
@@ -79,23 +79,23 @@
                             <a href="https://www.thetransmitter.org/announcements/">Announcements</a>
                         </li>
                         <li
-                            class="menu-item menu-item-type-custom menu-item-object-custom menu-item-228097 hover:text-light-red">
+                            class="menu-item menu-item-type-custom menu-item-object-custom menu-item-228097 hover:text-med-red">
                             <a
                                 href="https://simonsfoundation.wd1.myworkdayjobs.com/simonsfoundationcareers?locations=2fad6d9e67381001b69a60511f0a0000&amp;jobFamilyGroup=5a680967794410df1c5fdbab78dd373e">Careers</a>
                         </li>
                         <li
-                            class="menu-item menu-item-type-custom menu-item-object-custom menu-item-203493 hover:text-light-red">
+                            class="menu-item menu-item-type-custom menu-item-object-custom menu-item-203493 hover:text-med-red">
                             <a href="https://www.thetransmitter.org/feed/">RSS</a>
                         </li>
                         <li
-                            class="menu-item menu-item-type-custom menu-item-object-custom menu-item-222076 hover:text-light-red">
+                            class="menu-item menu-item-type-custom menu-item-object-custom menu-item-222076 hover:text-med-red">
                             <a href="https://www.simonsfoundation.org/terms-and-conditions/">Terms and Conditions (Simons Foundation)</a>
                         </li>
                         <li>
                             <a href="https://www.thetransmitter.org/editorial-policies/">Editorial Policies</a>
                         </li>
                         <li
-                            class="menu-item menu-item-type-custom menu-item-object-custom menu-item-222077 hover:text-light-red">
+                            class="menu-item menu-item-type-custom menu-item-object-custom menu-item-222077 hover:text-med-red">
                             <a href="https://www.simonsfoundation.org/privacy-policy-online-publications/">Privacy Policy (Simons Foundation)</a>
                         </li>
                         <li>
