TTWWW-580: Sticky header on List view

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -15,7 +15,7 @@
             <div class='pb-3.25 text-2xs uppercase text-med-navy'><span id='results-count'>0</span> results</div>
 
             <table id='studies-table' class='w-full'>
-                <thead class='bg-dark-gray border-b-3 border-tan'>
+                <thead class='bg-dark-gray border-b-3 border-tan sticky top-17.7 z-10'>
                     <tr>
                         <th scope='col' class='w-toggle'></th>
                         <th scope='col'>YEAR</th>
