TTWWW-573: updates to allow filters to stay active when navigating to the about page and page to the map or list pages

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -116,3 +116,25 @@
 
 {% block modal_block %}
 {% endblock %}
+
+{% block js_block %}
+<script>
+    let min_yearpublished = '{{ min_yearpublished }}';
+    let max_yearpublished = '{{ max_yearpublished }}';
+    let yearsstudied_number_min = '{{ yearsstudied_number_min }}';
+    let yearsstudied_number_max = '{{ yearsstudied_number_max }}';
+    let min_samplesize = '{{ min_samplesize }}';
+    let max_samplesize = '{{ max_samplesize }}';
+    let min_prevalenceper10000 = '{{ min_prevalenceper10000 }}';
+    let max_prevalenceper10000 = '{{ max_prevalenceper10000 }}';
+    let meanincomeofparticipants = '{{ meanincomeofparticipants }}';
+    let educationlevelofparticipants = '{{ educationlevelofparticipants }}';
+    let studytype = '{{ studytype }}';
+    let keyword = '{{ keyword }}';
+    let timeline_type = '{{ timeline_type }}';
+    let income = '{{ meanincome }}';
+    let education = '{{ education }}';
+    let country = '{{ country }}';
+    let continent = '{{ continent }}';
+</script>
+{% endblock %}
