--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -5,17 +5,17 @@
 <head>
     <meta charset='utf-8'>
     <title>{% block title %}Global Autism Prevalence Map | The Transmitter{% endblock %}</title>
-    <meta name='description' content='The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.'>
+    <meta name='description' content='{% block meta_description %}The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.{% endblock %}'>
     <meta name='author' content=''>
     <meta name='twitter:card' content='summary_large_image'>
-    <meta name='twitter:title' content='Global Autism Prevalence Map | The Transmitter'>
-    <meta name='twitter:description' content='The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.'>
+    <meta name='twitter:title' content='{% block twitter_title %}Global Autism Prevalence Map | The Transmitter{% endblock %}'>
+    <meta name='twitter:description' content='{% block twitter_description %}The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.{% endblock %}'>
     <meta name='twitter:image' content='https://autismprevalence.thetransmitter.org/static/autism_prevalence_map/img/global-ausitm-prevalence-map-social.png'>
-    <meta property='og:title' content='Global Autism Prevalence Map | The Transmitter' />
+    <meta property='og:title' content='{% block og_title %}Global Autism Prevalence Map | The Transmitter{% endblock %}' />
     <meta property='og:type' content='website' />
     <meta property='og:url' content='https://autismprevalence.thetransmitter.org/' />
     <meta property='og:image' content='https://autismprevalence.thetransmitter.org/static/autism_prevalence_map/img/global-ausitm-prevalence-map-social.png' />
-    <meta property='og:description' content='The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.' />
+    <meta property='og:description' content='{% block og_description %}The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.{% endblock %}' />
 
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
 
@@ -54,7 +54,6 @@
 
     </script>
     <!-- End Google Tag Manager -->
-
 </head>
 
 <body class='font-sans bg-tan' data-page='{% block page_name %}{% endblock %}'>
