TTWWW-548: added support for meta thumbnail and removed inline formatting from about content and moved into tailwinds.css

--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind/tailwind.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind/tailwind.css
@@ -19,6 +19,18 @@
         @apply pl-8 mb-8 list-disc marker:text-red;
     }
 
+    article li {
+        @apply mb-5.5;
+    }
+
+    article h2 {
+        @apply font-medium font-sans mb-4 md:mb-7.5 md:mt-12 md:text-lg mt-6 text-1md text-red uppercase;
+    }
+
+    article h2:first-child {
+        @apply mt-0;
+    }
+
     footer section a {
         @apply no-underline text-light-navy-2 hover:text-med-red;
     }
