--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -73,6 +73,47 @@
                     <article class="mx-auto mt-3 md:max-w-159">
                         {{ section.content|safe }}
                     </article>
+                {% elif section.section_type == 'callout' %}
+                    <article data-module='callout' class="flex flex-col gap-8 mx-auto mt-3 mb-3 lg:mb-7 px-6 py-8 lg:p-12 md:max-w-159 border-l-red bg-light-gray border-l-4 lg:border-l-6">
+                        {{ section.content|safe }}
+                    </article>
+                {% elif section.section_type == 'newsletter' %}
+                    <article class='mx-auto md:max-w-159'>
+                        <div data-id="mc_embed_signup" class="bg-no-repeat bg-cover bg-dark-tan min-h-30 col-span-4 px-6 py-8 md:p-6 lg:px-8 lg:py-12 lg:col-span-6 lg:col-start-4" style="background-image: url(https://staging.thetransmitter.org/wp-content/uploads/2024/11/nl-background-softened-scaled.webp)">
+                            <form action="https://spectrumnews.us11.list-manage.com/subscribe/post-json?u=725d9bd9f4c8ea826904b1f95&amp;id=323ad556f4&amp;f_id=00fdc2e1f0&amp;c=?" method="post" class="w-full" data-id="mc-embedded-subscribe" data-page="" name="mc-embedded-subscribe" aria-label="Subscribe to a newsletter">
+                                <!--
+                                <div class="cf-turnstile" data-sitekey="0x4AAAAAAAz2iQKcvhCg0EjK">
+                                    <input type="hidden" name="cf-turnstile-response" id="cf-chl-widget-4x5r1_response" value="0.p5UHtUqhqfac3XeCRUINO1C3zlRbHFiOaXN_fNjLuPux9_zOFlmQy6DkHqSxBz6k_CP8-8QcAikH-YIuiHEkGPbpPqu-JcZ2oPZkeMHuTV0b7wiS2fm0WqT6d0mzks71GMj-4JrK_56E6w8yvqSJKs_6wyjfYKCGeohbPBzEdjU6J8o46dLz5_gKk3eWIeHmBYeOPHlXL5KPNKbmvW9tQkHpse59j4NrMnNE8fgNECC3CeAMUdgDHWgDSE50Gi0IzFppkTW3TP_tQ-IOy9-u2rRjMC4cwC_ZDlOdqaPq5ArNdfKwNMWWV6ExLF0Y5ZDFiMQHEatozQSu3rStSeVWKHB0iVT211lsqirud9U99nZvMMuyxuQMKZkUpKnrKovesJ97l6bt0EDzRGPtZaJJ03wuWWQZ_zppbfAEsS74wocqWXQ2lJDOyVGc9Imre0VV_0c5Yd9JVj1Hqfr16Vu58-6wEb8UwfX-cjCl_VemWp3sd3LGJAA_f2qXxGiYnjVNC8iHO9LQ2eKZtScDAP8Sg184XpuXU7tb_Igo38LxMjMgWWVRM_culfKq1km3yzygw-ZW20mfVlAfFD3tbpuRswsxIMRS1jHPX8qdi675V-lEkXau8ozAzBZ8K--LlbfD13bEh-CmkknNOQUXovw6Q83QqlW7TCUjlf3c8o_DVD4hTk7LGTkhSlN4X4szHaVUO80yqFVcF99Mkq6i_9mxZSyOumqnGo1PfZnsxMXUn23KB1netLaWeozaqT-dwQ7TL_M2nJfBJ83YAPtZ7GkaG4vfMY-lct_kmKHj1Dyjku7V2Rhi0P1ytjJRmgh5pSwLOLfqjjXugsvKUBh-x_bQHTTdewTu-Wbh8dWkuDkLOTs.9EqyJfsygTkmxlP2PfTqFw.dede66ac9f48e851fd4163a5f1db42d9f2d6492123f01872f483284943e24f59">
+                                </div>
+                                -->
+                                <div class="flex flex-col gap-4 lg:grid lg:grid-cols-9 lg:gap-6">
+                                    <div class="flex flex-col col-span-9" data-id="signup-instructions">
+                                        <h2 class="font-serif text-red font-normal normal-case text-3sm mb-1 md:mb-4 md:text-2md lg:text-lg lg:tracking-normal lg:leading-7.1" data-id="newsletter-title">{{ section.newsletter_title }}</h2>
+                                        <p class="font-serif text-dark-brown leading-5 text-1sm lg:text-3sm mb-0" data-id="newsletter-subtitle">{{ section.newsletter_support_line }}</p>
+                                    </div>
+                                    <div data-id="mce-response-error" class="hidden col-span-9 font-serif text-3sm text-red tracking-wide-sm lg:font-normal lg:leading-7.1 lg:text-2md lg:tracking-normal-md"></div>
+                                    <div class="flex flex-col  col-span-9" data-id="input-col">
+                                        <div class="flex flex-col max-w-newsletter">
+                                            <div class="flex">
+                                                <div class="grow relative">
+                                                    <label for="EMAIL" class="screen-reader-text">Email Address</label>
+                                                    <input type="email" placeholder="email@address.com" name="EMAIL" class="email border-r-0 w-full pl-4 py-4.5 h-10.5 border-0.125 border-navy rounded-l text-med-navy focus-visible:outline-0 placeholder:text-2xs placeholder:uppercase bg-light-navy-2 placeholder:opacity-60" value="">
+                                                    <div class="hidden absolute right-4 top-3.5" data-id="email-error-icon">
+                                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_515_446)"><path d="M8.0013 4.66602C8.36949 4.66602 8.66797 4.96449 8.66797 5.33268V7.99935C8.66797 8.36754 8.36949 8.66602 8.0013 8.66602C7.63311 8.66602 7.33463 8.36754 7.33463 7.99935V5.33268C7.33463 4.96449 7.63311 4.66602 8.0013 4.66602Z" fill="#D14D57"></path><path d="M8.0013 9.99935C7.63311 9.99935 7.33463 10.2978 7.33463 10.666C7.33463 11.0342 7.63311 11.3327 8.0013 11.3327H8.00797C8.37616 11.3327 8.67463 11.0342 8.67463 10.666C8.67463 10.2978 8.37616 9.99935 8.00797 9.99935H8.0013Z" fill="#D14D57"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M0.667969 7.99935C0.667969 3.94926 3.95121 0.666016 8.0013 0.666016C12.0514 0.666016 15.3346 3.94926 15.3346 7.99935C15.3346 12.0494 12.0514 15.3327 8.0013 15.3327C3.95121 15.3327 0.667969 12.0494 0.667969 7.99935ZM8.0013 1.99935C4.68759 1.99935 2.0013 4.68564 2.0013 7.99935C2.0013 11.3131 4.68759 13.9993 8.0013 13.9993C11.315 13.9993 14.0013 11.3131 14.0013 7.99935C14.0013 4.68564 11.315 1.99935 8.0013 1.99935Z" fill="#D14D57"></path></g><defs><clipPath id="clip0_515_446"><rect width="16" height="16" fill="white"></rect></clipPath></defs></svg>
+                                                    </div>
+                                                </div>
+                                                <button type="submit" name="subscribe" data-id="mc-subscribe-btn" class="button cursor-pointer border-l-0 border-0.5 w-22 max-w-newslettersubmit h-10.5 rounded-r text-center font-sans font-bold text-light-navy-2 leading-5.6 uppercase text-sm lg:w-full bg-med-navy border-navy">Submit</button>
+                                            </div>
+                                            <div data-id="error-message" class="hidden font-sans w-full pl-2 text-1xs text-med-red tracking-tight-sm font-light"></div>
+                                        </div>
+                                        <input type="checkbox" name="group[14][16]" id="mce-group[14]-14-4" value="" class="hidden" checked="">
+
+                                    </div>
+                                    <div data-id="mce-response" class="hidden col-span-9 font-serif text-3sm tracking-wide-sm lg:self-center lg:font-normal lg:leading-7.1 lg:text-2md lg:tracking-normal-md text-red"></div>
+                                </div>
+                            </form>
+                        </div>
+                    </article>
                 {% endif %}
             {% endfor %}
             <!--
